@@ -3,7 +3,7 @@
 	Nothing found
 % endif
 <ul id="searchResultList">
-% for album in sorted(albums, key=lambda album: "%s %s" % (album.name, album.disc)):
+% for album in sorted(albums, key=lambda album: "%s %s %s" % (album.artist, album.name, album.disc)):
 	<li class="searchResultItem">
 % if config.get('album_cover_path'):
 %	if album.hasCover():
@@ -11,9 +11,6 @@
 % 	endif
 % endif
 		<h3 class="album">
-% if where == 'genre':
-	${album.artist}
-% endif
 % if config.get('enable_queue_album'):
 			<a href="#" onclick="
 % for track in album.tracks:
@@ -22,7 +19,12 @@
 				return false
 			">
 % endif
-				${album.name}
+% if album.isCompilation:
+	${_('Various Artists')}
+% else:
+	${ album.artist }
+% endif
+				- ${album.name}
 % if album.disc != None:
 				(Disc ${album.disc})
 % endif
